Add audioreactivity experiment

--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
 
       <img src="07-flowfields/images/social-media-preview.png" alt="07 - flowfields">
     </a>
+    <a href="08-audioreactivity/" class="card" title="08 - audioreactivity">
+      <div class="overlay">
+        <div class="number">08</div>
+        audioreactivity
+      </div>
+
+      <img src="07-flowfields/images/social-media-preview.png" alt="08 - flowfields">
+    </a>
 
     <a href="https://github.com/jasonwebb/2d-diffusion-limited-aggregation-experiments/" class="card" title="View source on Github">
       <span class="fab fa-github" aria-hidden="true"></span>
